--- a/calendar.html
+++ b/calendar.html
@@ -1,1 +1,20 @@
-<iframe src="https://calendar.google.com/calendar/embed?height=1122&amp;wkst=2&amp;bgcolor=%23ffffff&amp;ctz=Europe%2FRome&amp;src=bGl2ZXIuY2FsZW5kYXJAZ21haWwuY29t&amp;color=%23039BE5&amp;showTitle=1&amp;showNav=1&amp;mode=WEEK" style="border-width:0" width="800" height="1122" frameborder="0" scrolling="no"></iframe>
+<!DOCTYPE html>
+<html lang="en">
+<meta charset="UTF-8">
+<title>Page Title</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="stylesheet" href="">
+<style>
+</style>
+<script src=""></script>
+<body>
+
+<div class="">
+  <iframe src="https://radio.oltrebanda.ml/public/oltrebanda/embed?theme=dark" frameborder="0" allowtransparency="true" style="width: 100%; min-height: 150px; border: 0;"></iframe>
+</div>
+
+</body>
+</html>
+
+
+
